Proyecto_DLP_2/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		INT_CONSTANT=39, REAL_CONSTANT=40, CHAR_CONSTANT=41, IDENT=42, LINE_COMMENT=43, 
		MULTILINE_COMMENT=44, WHITESPACE=45;
	public static final int
		RULE_start = 0, RULE_definiciones = 1, RULE_definicion = 2, RULE_definicion_variable_global = 3, 
		RULE_definicion_struct = 4, RULE_campos_struct = 5, RULE_campo_struct = 6, 
		RULE_definicion_funcion = 7, RULE_parametros = 8, RULE_parametro = 9, 
		RULE_retorno = 10, RULE_variables_locales = 11, RULE_definicion_variable_local = 12, 
		RULE_sentencias = 13, RULE_sentencia = 14, RULE_sentencia_asignacion = 15, 
		RULE_sentencia_print = 16, RULE_sentencia_read = 17, RULE_sentencia_if = 18, 
		RULE_sentencia_while = 19, RULE_sentencia_llamada_funcion = 20, RULE_sentencia_return = 21, 
		RULE_expr = 22, RULE_parametros_llamada = 23, RULE_tipo = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definiciones", "definicion", "definicion_variable_global", 
			"definicion_struct", "campos_struct", "campo_struct", "definicion_funcion", 
			"parametros", "parametro", "retorno", "variables_locales", "definicion_variable_local", 
			"sentencias", "sentencia", "sentencia_asignacion", "sentencia_print", 
			"sentencia_read", "sentencia_if", "sentencia_while", "sentencia_llamada_funcion", 
			"sentencia_return", "expr", "parametros_llamada", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "';'", "'struct'", "'{'", "'}'", "'('", "')'", 
			"','", "'='", "'print'", "'printsp'", "'println'", "'read'", "'if'", 
			"'else'", "'while'", "'return'", "'!'", "'*'", "'/'", "'+'", "'-'", "'=='", 
			"'!='", "'<'", "'>'", "'>='", "'<='", "'&&'", "'||'", "'cast'", "'['", 
			"']'", "'.'", "'int'", "'float'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "IDENT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefinicionesContext definiciones;
		public DefinicionesContext definiciones() {
			return getRuleContext(DefinicionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((StartContext)_localctx).definiciones = definiciones();
			setState(51);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).definiciones.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definicion> ast = new ArrayList<Definicion>();
		public DefinicionContext definicion;
		public List<DefinicionContext> definicion() {
			return getRuleContexts(DefinicionContext.class);
		}
		public DefinicionContext definicion(int i) {
			return getRuleContext(DefinicionContext.class,i);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << IDENT))) != 0)) {
				{
				{
				setState(54);
				((DefinicionesContext)_localctx).definicion = definicion();
				 _localctx.ast.add(((DefinicionesContext)_localctx).definicion.ast); 
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public Definicion ast;
		public Definicion_variable_globalContext definicion_variable_global;
		public Definicion_structContext definicion_struct;
		public Definicion_funcionContext definicion_funcion;
		public Definicion_variable_globalContext definicion_variable_global() {
			return getRuleContext(Definicion_variable_globalContext.class,0);
		}
		public Definicion_structContext definicion_struct() {
			return getRuleContext(Definicion_structContext.class,0);
		}
		public Definicion_funcionContext definicion_funcion() {
			return getRuleContext(Definicion_funcionContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				((DefinicionContext)_localctx).definicion_variable_global = definicion_variable_global();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).definicion_variable_global.ast; 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				((DefinicionContext)_localctx).definicion_struct = definicion_struct();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).definicion_struct.ast; 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				((DefinicionContext)_localctx).definicion_funcion = definicion_funcion();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).definicion_funcion.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_variable_globalContext extends ParserRuleContext {
		public Definicion_variable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Definicion_variable_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_variable_global; }
	}

	public final Definicion_variable_globalContext definicion_variable_global() throws RecognitionException {
		Definicion_variable_globalContext _localctx = new Definicion_variable_globalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicion_variable_global);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__0);
			setState(74);
			((Definicion_variable_globalContext)_localctx).IDENT = match(IDENT);
			setState(75);
			match(T__1);
			setState(76);
			((Definicion_variable_globalContext)_localctx).tipo = tipo();
			setState(77);
			match(T__2);
			 ((Definicion_variable_globalContext)_localctx).ast =  new Definicion_variable(((Definicion_variable_globalContext)_localctx).IDENT, ((Definicion_variable_globalContext)_localctx).tipo.ast, Ambito.GLOBAL); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_structContext extends ParserRuleContext {
		public Definicion_struct ast;
		public Token IDENT;
		public Campos_structContext campos_struct;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public Campos_structContext campos_struct() {
			return getRuleContext(Campos_structContext.class,0);
		}
		public Definicion_structContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_struct; }
	}

	public final Definicion_structContext definicion_struct() throws RecognitionException {
		Definicion_structContext _localctx = new Definicion_structContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definicion_struct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__3);
			setState(81);
			((Definicion_structContext)_localctx).IDENT = match(IDENT);
			setState(82);
			match(T__4);
			setState(83);
			((Definicion_structContext)_localctx).campos_struct = campos_struct();
			setState(84);
			match(T__5);
			setState(85);
			match(T__2);
			 ((Definicion_structContext)_localctx).ast =  new Definicion_struct(((Definicion_structContext)_localctx).IDENT, ((Definicion_structContext)_localctx).campos_struct.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Campos_structContext extends ParserRuleContext {
		public List<Campo_struct> ast = new ArrayList<Campo_struct>();
		public Campo_structContext campo_struct;
		public List<Campo_structContext> campo_struct() {
			return getRuleContexts(Campo_structContext.class);
		}
		public Campo_structContext campo_struct(int i) {
			return getRuleContext(Campo_structContext.class,i);
		}
		public Campos_structContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campos_struct; }
	}

	public final Campos_structContext campos_struct() throws RecognitionException {
		Campos_structContext _localctx = new Campos_structContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_campos_struct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(88);
				((Campos_structContext)_localctx).campo_struct = campo_struct();
				 _localctx.ast.add(((Campos_structContext)_localctx).campo_struct.ast); 
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Campo_structContext extends ParserRuleContext {
		public Campo_struct ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Campo_structContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo_struct; }
	}

	public final Campo_structContext campo_struct() throws RecognitionException {
		Campo_structContext _localctx = new Campo_structContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_campo_struct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			((Campo_structContext)_localctx).IDENT = match(IDENT);
			setState(97);
			match(T__1);
			setState(98);
			((Campo_structContext)_localctx).tipo = tipo();
			setState(99);
			match(T__2);
			 ((Campo_structContext)_localctx).ast =  new Campo_struct(((Campo_structContext)_localctx).IDENT, ((Campo_structContext)_localctx).tipo.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_funcionContext extends ParserRuleContext {
		public Definicion_funcion ast;
		public Token IDENT;
		public ParametrosContext parametros;
		public RetornoContext retorno;
		public Variables_localesContext variables_locales;
		public SentenciasContext sentencias;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public Variables_localesContext variables_locales() {
			return getRuleContext(Variables_localesContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public Definicion_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_funcion; }
	}

	public final Definicion_funcionContext definicion_funcion() throws RecognitionException {
		Definicion_funcionContext _localctx = new Definicion_funcionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_definicion_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((Definicion_funcionContext)_localctx).IDENT = match(IDENT);
			setState(103);
			match(T__6);
			setState(104);
			((Definicion_funcionContext)_localctx).parametros = parametros();
			setState(105);
			match(T__7);
			setState(106);
			((Definicion_funcionContext)_localctx).retorno = retorno();
			setState(107);
			match(T__4);
			setState(108);
			((Definicion_funcionContext)_localctx).variables_locales = variables_locales();
			setState(109);
			((Definicion_funcionContext)_localctx).sentencias = sentencias();
			setState(110);
			match(T__5);
			 ((Definicion_funcionContext)_localctx).ast =  new Definicion_funcion(((Definicion_funcionContext)_localctx).IDENT, ((Definicion_funcionContext)_localctx).parametros.ast, ((Definicion_funcionContext)_localctx).retorno.ast, ((Definicion_funcionContext)_localctx).variables_locales.ast, ((Definicion_funcionContext)_localctx).sentencias.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<Definicion_variable> ast = new ArrayList<Definicion_variable>();
		public ParametroContext parametro;
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(113);
				((ParametrosContext)_localctx).parametro = parametro();
				 _localctx.ast.add(((ParametrosContext)_localctx).parametro.ast); 
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(115);
					match(T__8);
					setState(116);
					((ParametrosContext)_localctx).parametro = parametro();
					 _localctx.ast.add(((ParametrosContext)_localctx).parametro.ast); 
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public Definicion_variable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			((ParametroContext)_localctx).IDENT = match(IDENT);
			setState(127);
			match(T__1);
			setState(128);
			((ParametroContext)_localctx).tipo = tipo();
			 ((ParametroContext)_localctx).ast =  new Definicion_variable(((ParametroContext)_localctx).IDENT, ((ParametroContext)_localctx).tipo.ast, Ambito.LOCAL); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetornoContext extends ParserRuleContext {
		public Tipo ast;
		public TipoContext tipo;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public RetornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retorno; }
	}

	public final RetornoContext retorno() throws RecognitionException {
		RetornoContext _localctx = new RetornoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_retorno);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(131);
				match(T__1);
				setState(132);
				((RetornoContext)_localctx).tipo = tipo();
				 ((RetornoContext)_localctx).ast =  ((RetornoContext)_localctx).tipo.ast; 
				}
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				 ((RetornoContext)_localctx).ast =  new Tipo_Void(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variables_localesContext extends ParserRuleContext {
		public List<Definicion_variable> ast = new ArrayList<Definicion_variable>();
		public Definicion_variable_localContext definicion_variable_local;
		public List<Definicion_variable_localContext> definicion_variable_local() {
			return getRuleContexts(Definicion_variable_localContext.class);
		}
		public Definicion_variable_localContext definicion_variable_local(int i) {
			return getRuleContext(Definicion_variable_localContext.class,i);
		}
		public Variables_localesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables_locales; }
	}

	public final Variables_localesContext variables_locales() throws RecognitionException {
		Variables_localesContext _localctx = new Variables_localesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_variables_locales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(138);
				((Variables_localesContext)_localctx).definicion_variable_local = definicion_variable_local();
				 _localctx.ast.add(((Variables_localesContext)_localctx).definicion_variable_local.ast); 
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_variable_localContext extends ParserRuleContext {
		public Definicion_variable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Definicion_variable_localContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_variable_local; }
	}

	public final Definicion_variable_localContext definicion_variable_local() throws RecognitionException {
		Definicion_variable_localContext _localctx = new Definicion_variable_localContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_definicion_variable_local);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__0);
			setState(147);
			((Definicion_variable_localContext)_localctx).IDENT = match(IDENT);
			setState(148);
			match(T__1);
			setState(149);
			((Definicion_variable_localContext)_localctx).tipo = tipo();
			setState(150);
			match(T__2);
			 ((Definicion_variable_localContext)_localctx).ast =  new Definicion_variable(((Definicion_variable_localContext)_localctx).IDENT, ((Definicion_variable_localContext)_localctx).tipo.ast, Ambito.LOCAL); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
